GNOME Bugzilla – Bug 614185
g_type_class_add_private() documentation is not correct
Last modified: 2010-03-29 16:18:49 UTC
Patch following
Created attachment 157327 [details] [review] Fix g_type_class_add_private()
Apparently fixed in master.
No, It's no fixed. Note that commit 81e2aa941bbfd02bf1b6235da12834d282ceda0c introduced the incorrect change.
My apologies. This definitely needs to be fixed in the next stable.
No. I removed that example for a reason. Look at it, it is just wrong.
Created attachment 157380 [details] [review] Re-introduce example for g_type_class_add_private and fix Since My apologies, Matthias, I had thought the above patched fixed the example but it isn't complete. Attached is an updated patch. I also added a sentence to stress the use of a priv pointer. Note the Since: 2.24 also has to be corrected to say Since 2.4 again, as done in the patch.
Comment on attachment 157327 [details] [review] Fix g_type_class_add_private() commit 0f51e995658a50dbecb74b006f05a1ea69f43558
This problem has been fixed in our software repository. The fix will go into the next software release.