Fix g_type_class_add_private() documentation

This fixes commit 81e2aa941bbfd02bf1b6235da12834d282ceda0c

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=614185